# twitter-sentiment-analysis

./: .gitignore  Dockerfile  README.md  api.py  environment.yml  requirements-dev.txt  requirements.txt  run_pipeline.py  setup.cfg  setup.py
app/: Home.py  generate_page.py
app/pages/: 1_Artificial_Intelligence.py  2_Bitcoin.py  3_Congress.py  4_Covid.py  4_Twitter.py  5_Model_Inference_Access.py
notebooks/: Untitled.ipynb  model_training_dev.ipynb
src/birdwatcher/: __init__.py  date_helpers.py  nlp_utils.py  parallel_utils.py  s3_utils.py
src/birdwatcher/config/: __init__.py  collection_run_info.pkl  config.py  data_collection_config.yaml  dataprep_config.yaml  feature_generation_config.yaml  paths.yaml  summarize_config.yaml  training_config.yaml
src/birdwatcher/datacollection/: __init__.py  collection.py  type_utils.py
src/birdwatcher/dataprep/: __init__.py  prep.py
src/birdwatcher/ml/: PCAPlotIt.py  __init__.py  evaluation.py  feature_generation.py  inference.py  tfidf_vectorizer.pkl  trained_inference_pipeline.pkl  trained_model.pkl  trained_pca.pkl  training.py  training_pipeline.pkl
src/birdwatcher/summarize/: PostProcessor.py  __init__.py  post_processing_utils.py  summarize.py
tests/: conftest.py
