[metadata]
name = birdwatcher
version = 0.1
description = A package to enable functioning of tweet monitoring app.
long-description = file: README.md
long_description_content_type: text/markdown
url = https://github.com/BobbyLumpkin/twitter-sentiment-analysis.git
keywords = twitter,sentiment,analysis,monitoring
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir=
    =src
packages =
    birdwatcher
    birdwatcher.config
    birdwatcher.datacollection
    birdwatcher.dataprep
    birdwatcher.ml
    birdwatcher.summarize
python_requires = >=3.8
install_requires =
    boto3 >= 1.26.0
    langdetect >= 1.0.0
    matplotlib >= 3.7.0
    nltk >= 3.7.0
    pandas >= 1.2.0
    pyarrow
    pydantic >= 1.10.0
    s3fs >= 2023.1.0
    scikit-learn >= 1.2.0
    tqdm
    tweepy >= 4.4.0

[options.package_data]
* =
    *.yaml
    *.pkl